dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)

dnl Checks for programs.

AC_PATH_PROG(JAVA, java, :)
if test ":" = "$JAVA"
then
	echo "***WARNING*** \"java\" not found. Java is needed for processing the XML sources using XT." 
fi

AC_PATH_PROGS(MAKE, gmake make, :)
if test $MAKE = ":"
then
	echo "***WARNING*** \"make\" not found. You don't get to square 1 without make."
fi
_make_try=`$MAKE --version 2>/dev/null`
if test ! "$_make_try"
then
	echo "***WARNING*** \"$MAKE\" is not GNU Make.  Some parts of the build may fail."
fi

AC_PATH_PROGS(PERL, perl5 perl, :)
if test "$PERL" = ":"
then
	echo "***WARNING*** \"perl\" not found. You won't get far without perl."
fi

AC_PATH_PROGS(INSTALL, install, :)
if test "$INSTALL" = ":"
then
	echo "***WARNING*** \"install\" not found. Build might work but installation won't."
fi

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile \
	build/Makefile:src/Makefile.in \
	build/common/Makefile:src/common/Makefile.in \
	build/common/vars.mk:src/common/vars.mk.in \
	build/rbjpub/Makefile:src/rbjpub/Makefile.in \
	build/rbjpub/engineer/Makefile:src/rbjpub/engineer/Makefile.in \
	build/rbjpub/logic/Makefile:src/rbjpub/logic/Makefile.in \
	build/rbjpub/logic/foundations/Makefile:src/rbjpub/logic/foundations/Makefile.in \
	build/rbjpub/methods/Makefile:src/rbjpub/methods/Makefile.in \
	build/rbjpub/philos/Makefile:src/rbjpub/philos/Makefile.in \
	build/rbjpub/philos/logic/Makefile:src/rbjpub/philos/logic/Makefile.in \
	build/rbjpub/philos/history/Makefile:src/rbjpub/philos/history/Makefile.in \
	build/rbjpub/philos/bibliog/Makefile:src/rbjpub/philos/bibliog/Makefile.in \
	build/rbjpub/pp/Makefile:src/rbjpub/pp/Makefile.in \
	build/rbjpub/pp/gst/Makefile:src/rbjpub/pp/gst/Makefile.in \
	build/rbjpub/pp/doc/Makefile:src/rbjpub/pp/doc/Makefile.in \
	build/rbjpub/science/Makefile:src/rbjpub/science/Makefile.in \
	build/rbjpub/rbjcv/Makefile:src/rbjpub/rbjcv/Makefile.in \
	build/rbjpub/rbjcv/rjiab/Makefile:src/rbjpub/rbjcv/rjiab/Makefile.in \
	build/rbjpub/www/Makefile:src/rbjpub/www/Makefile.in \
	build/rbjpub/www/papers/Makefile:src/rbjpub/www/papers/Makefile.in \
	build/rbjpub/www/books/Makefile:src/rbjpub/www/books/Makefile.in \
	build/rbjpub/www/books/mp/Makefile:src/rbjpub/www/books/mp/Makefile.in )


