dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)

dnl Checks for programs.

AC_PATH_PROG(JAVA, java, :)
if test ":" = "$JAVA"
then
	echo "***WARNING*** \"java\" not found. Java is needed for XSLT transformations on the XML sources." 
fi

AC_PATH_PROGS(MAKE, gmake make, :)
if test $MAKE = ":"
then
	echo "***WARNING*** \"make\" not found. You don't get to square 1 without make."
fi
_make_try=`$MAKE --version 2>/dev/null`
if test ! "$_make_try"
then
	echo "***WARNING*** \"$MAKE\" is not GNU Make.  Some parts of the build are likely to fail."
fi

AC_PATH_PROGS(PERL, perl5 perl, :)
if test "$PERL" = ":"
then
	echo "***WARNING*** \"perl\" not found. You won't get far without perl."
fi

AC_PATH_PROGS(INSTALL, install, :)
if test "$INSTALL" = ":"
then
	echo "***WARNING*** \"install\" not found. Build might work but installation will not be possible."
fi

AC_PATH_PROGS(DOCSML, docsml, :)
if test "$DOCSML" = ":"
then
	echo "***WARNING*** \"docsml\" not found. This is necessary to prepare documents for use with ProofPower and a complete build will not be possible without it."
fi

AC_PATH_PROGS(SML, sml, :)
if test "$SML" = ":"
then
	echo "***WARNING*** \"sml\" not found. This is needed for ProofPower or isabelle, and the site build will be incomplete without it.  New Jersey SML is needed."
fi

AC_PATH_PROGS(ISABELLE, isabelle, :)
if test "$ISABELLE" = ":"
then
	echo "***WARNING*** \"isabelle\" not found. This is used for processing some of the formal models, but most of the build should go through without it."
fi



dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT( \
	Makefile build/vars.mk \
	work/Makefile:root/Makefile.in \
	work/arch/Makefile:arch/Makefile.in \
	work/build/Makefile:build/Makefile.in \
	work/build/docprep/Makefile:build/docprep/Makefile.in \
	work/isabelle/Makefile:isabelle/Makefile.in \
	work/isabelle/tok/Makefile:isabelle/tok/Makefile.in \
	work/isabelle/xml/Makefile:isabelle/xml/Makefile.in \
	work/OpenMind/Makefile:OpenMind/Makefile.in \
	work/sml/Makefile:sml/Makefile.in \
	work/pp/Makefile:pp/Makefile.in \
	work/pp/holzfc/Makefile:pp/holzfc/Makefile.in \
	work/pp/gst/Makefile:pp/gst/Makefile.in \
	work/pp/gst/tok/Makefile:pp/gst/tok/Makefile.in \
	work/pp/gst/xml/Makefile:pp/gst/xml/Makefile.in \
	)





